[package]
name = "topcodes"
version = "0.1.0"
edition = "2021"
exclude = [
  "assets/",
  "src/main.rs"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.2", optional = true }

[dev-dependencies]
image = "0.24.2"

[features]
visualize = ["image"]
