[package]
name = "topcodes"
version = "0.1.0"
edition = "2021"
exclude = [
  "assets/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.2", optional = true }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
image = "0.24.2"

[[bench]]
name = "scanner"
harness = false

[features]
visualize = ["image"]
