[package]
name = "topcodes"
description = "A scanner for detecting TopCodes in an image buffer"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"
repository = "https://github.com/tangibl/topcodes-rs"
exclude = [
  ".github",
  "assets/",
  "docs/",
  "CHANGELOG.md"
]

[dependencies]
image = { version = "0.24.4", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
image = "0.24.4"

[[bench]]
name = "scanner"
harness = false

[features]
visualize = ["image"]
